changing the meta icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
+        <meta property="og:image" content="images/users/user-48.jpg">
 
         <link href="plugins/filter/magnific-popup.css" rel="stylesheet" type="text/css" />
         <link href="plugins/animated/headline.css" rel="stylesheet" type="text/css" />
