adding meta tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
+        
         <meta property="og:image" content="images/users/user-48.jpg">
+        <meta property="og:site_name" content="Krishna Chaitanya">
+        <meta property="og:title" content="Krishna Chaitanya">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://makrishna.github.io/resume/">
+        <meta property="og:description" content="Frontend developer based in Bangalore, India. Focussed on the web, creative interactions in design and architecture.">
 
         <link href="plugins/filter/magnific-popup.css" rel="stylesheet" type="text/css" />
         <link href="plugins/animated/headline.css" rel="stylesheet" type="text/css" />
