adding meta tags

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>KC - Resume</title>
+        <title>Krishna Chaitanya | Interactive front-end developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="My self acharyakc" name="description" />
         <meta content="Krishna Chaitanya" name="author" />
 
         <!-- App favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
-        
+
         <meta property="og:image" content="images/users/user-48.jpg">
         <meta property="og:site_name" content="Krishna Chaitanya">
         <meta property="og:title" content="Krishna Chaitanya">
